[package]
name = "interactive-mlisa-dev"
version = "0.1.0"
authors = ["baspar <me@bastien-laine.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
termion = "*"
serde_json = "1.0"
anyhow = "1.0"
